--- a/src/pages/fun.astro
+++ b/src/pages/fun.astro
@@ -22,7 +22,7 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
             <div class="row">
                 <span class="label">Hobbies</span>
                 <span class="arrow">→</span>
-                <span class="value name-highlight">Listening to music, playing games, gyms, wathcing movies (and series formerly), amateur photography</span>
+                <span class="value">Listening to music, playing games, gyms, watching movies (and series formerly), amateur photography</span>
             </div>
         </div>
     </section>
@@ -41,7 +41,7 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
             <div class="row">
                 <span class="label">Favorite music artists</span>
                 <span class="arrow">→</span>
-                <span class="value">Kastra, Elevation Worship, William Black, Bethel Music, Da Tweekaz</span>
+                <span class="value">Kastra, Elevation Worship, William Black, Bethel Music, Da Tweekaz, JPCC, True Worshippers</span>
             </div>
 
             <div class="row">
@@ -61,7 +61,13 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
             <div class="row">
                 <span class="label">Photography target or objects?</span>
                 <span class="arrow">→</span>
-                <span class="value name-highlight">Buildings, nature, (and still trying to put peoples in frame to look good)</span>
+                <span class="value">Buildings, nature, (and still trying to put peoples in frame to look good)</span>
+            </div>
+
+            <div class="row">
+                <span class="label">Level</span>
+                <span class="arrow">→</span>
+                <span class="value">Amateur</span>
             </div>
 
             <div class="row">
@@ -71,7 +77,7 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
             </div>
 
             <div class="row">
-                <span class="label">Amateur photopgraphy portofolio here</span>
+                <span class="label">Portofolio here</span>
                 <span class="arrow">→</span>
                 <span class="value social-links">
                     <a href="https://www.instagram.com/wzhsnapshots" target="_blank">Instagram</a>
@@ -91,7 +97,7 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
             </div>
 
             <div class="row">
-                <span class="label">Roles</span>
+                <span class="label">Competitive Gaming Roles</span>
                 <span class="arrow">→</span>
                 <span class="value">Primary support, IGL second, entry/assult/sniper third, last is flex</span>
             </div>
@@ -101,7 +107,7 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
             <div class="row">
                 <span class="label">Side quest</span>
                 <span class="arrow">→</span>
-                <span class="value name-highlight">Streaming and content creation (more into streaming anyway)</span>
+                <span class="value">Streaming and content creation (more into streaming anyway)</span>
             </div>
 
             <div class="row">
@@ -112,7 +118,7 @@ const pageImage = "/glass-mirror/images/fun-profile.png";
         </div>
 
         <div class="cta-container">
-            <a href="https://www.youtube.com/@7Akihito" class="btn-primary">Check My Content 📺</a>
+            <a href="https://www.youtube.com/@7Akihito" class="btn-primary" target="_blank">Check My Content 📺</a>
         </div>
     </section>
 
