--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
-const pageTitle = "Content Creation";
+const pageTitle = "Akihito's Content Collections";
 
 const allPosts = await Astro.glob('./posts/*.md');
 
