--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
-const pageTitle = "Projects";
+const pageTitle = "jychpr's Projects";
 
 const allPosts = await Astro.glob('./posts/*.md');
 
