--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -30,10 +30,10 @@ import '../styles/global.css';
         <p class="sub-message">This page does not exist in the reflection.</p>
         
         <div class="actions">
-            <a href="/glass-mirror/" id="btn-pro" class="btn">
+            <a href="/" id="btn-pro" class="btn">
                 Return to Pro Side 👔
             </a>
-            <a href="/glass-mirror/fun" id="btn-fun" class="btn">
+            <a href="/fun" id="btn-fun" class="btn">
                 Return to Fun Side 🎮
             </a>
         </div>
