--- a/src/pages/fun.astro
+++ b/src/pages/fun.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Akihito - jychpr's Glass Mirror another side";
 const pageDescription = "jychpr's another side of the mirror";
-const pageImage = "/glass-mirror/images/fun-profile.png"; 
+const pageImage = "/images/fun-profile.png"; 
 ---
 
 <BaseLayout pageTitle={pageTitle} description={pageDescription} image={pageImage}>
