--- a/src/pages/gaming.astro
+++ b/src/pages/gaming.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Akihito's Gaming Things";
 const pageDescription = "PC Specs, Peripherals, and Gaming History.";
-const pageImage = "/glass-mirror/images/pc-rig.png"; 
+const pageImage = "/images/pc-rig.png"; 
 ---
 
 <BaseLayout pageTitle={pageTitle} description={pageDescription} image={pageImage}>
