--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "jychpr's Glass Mirror";
 const pageDescription = "jychpr's technical background";
-const pageImage = "/glass-mirror/images/pro-profile.jpg"; 
+const pageImage = "/images/pro-profile.jpg"; 
 ---
 
 <BaseLayout pageTitle={pageTitle} description={pageDescription} image={pageImage}>
@@ -71,7 +71,7 @@ const pageImage = "/glass-mirror/images/pro-profile.jpg";
         </div>
 
         <div class="cta-container">
-            <a href="/glass-mirror/cv" class="btn-primary" target="_blank">View Full Resume</a>
+            <a href="/cv" class="btn-primary" target="_blank">View Full Resume</a>
         </div>
     </section>
 
