minor revise CV resume

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -8,7 +8,7 @@ import CVLayout from '../layouts/CVLayout.astro';
         <header class="cv-header">
             <h1>Joy Chrissetyo Prajogo <span class="chinese-name">王智豪</span></h1>
             <div class="contact-info">
-                <p>East District, Hsinchu City, 300093, Republic of China (Taiwan)</p>
+                <p>East District, Hsinchu City, 300093, Taiwan</p>
                 <p>
                     +886972948350 |
                     <a href="mailto:joy.chr.pr@gmail.com">joy.chr.pr@gmail.com</a>
@@ -24,7 +24,7 @@ import CVLayout from '../layouts/CVLayout.astro';
             <h2>Formal Education</h2>
             <div class="item">
                 <div class="row">
-                    <h3>National Yang Ming Chiao Tung University (NYCU), Hsinchu, Republic of China (Taiwan)</h3>
+                    <h3>National Yang Ming Chiao Tung University (NYCU), Hsinchu, Taiwan</h3>
                     <span class="date">2024 - 2026 (Expected)</span>
                 </div>
                 <p class="sub">Master of Science (M.S.) in Electrical Engineering and Computer Science (EECS)</p>
@@ -56,7 +56,7 @@ import CVLayout from '../layouts/CVLayout.astro';
             <h2>Professional Experience</h2>
             <div class="item">
                 <div class="row">
-                    <h3>National Yang Ming Chiao Tung University (NYCU), Hsinchu, Republic of China (Taiwan)</h3>
+                    <h3>National Yang Ming Chiao Tung University (NYCU), Hsinchu, Taiwan</h3>
                 </div>
                 <div class="row">
                     <h3>Master (M.S.) Student Researcher, Full Time</h3>
@@ -72,7 +72,7 @@ import CVLayout from '../layouts/CVLayout.astro';
             </div>
             <div class="item">
                 <div class="row">
-                    <h3>National Yang Ming Chiao Tung University (NYCU), Hsinchu, Republic of China (Taiwan)</h3>
+                    <h3>National Yang Ming Chiao Tung University (NYCU), Hsinchu, Taiwan</h3>
                 </div>
                 <div class="row">
                     <h3>Research Assistant, Internship</h3>
@@ -239,7 +239,7 @@ import CVLayout from '../layouts/CVLayout.astro';
         <header class="cv-header">
             <h1>Joy Chrissetyo Prajogo <span class="chinese-name">王智豪</span></h1>
             <div class="contact-info">
-                <p>中華民國(臺灣) 300093 新竹市東區</p>
+                <p>臺灣 300093 新竹市東區</p>
                 <p>
                     +886972948350 |
                     <a href="mailto:joy.chr.pr@gmail.com">joy.chr.pr@gmail.com</a>
@@ -255,7 +255,7 @@ import CVLayout from '../layouts/CVLayout.astro';
             <h2>正規教育</h2>
             <div class="item">
                 <div class="row">
-                    <h3>國立陽明交通大學 (陽明交大)，新竹市，中華民國 (台灣)</h3>
+                    <h3>國立陽明交通大學 (陽明交大)，新竹市，臺灣</h3>
                     <span class="date">2024 - 2026 (預計)</span>
                 </div>
                 <p class="sub">電機資訊國際碩士學位學程 (EECS) 理學碩士 (M.S.)</p>
@@ -287,7 +287,7 @@ import CVLayout from '../layouts/CVLayout.astro';
             <h2>工作經驗</h2>
             <div class="item">
                 <div class="row">
-                    <h3>國立陽明交通大學 (陽明交大)，新竹市，中華民國 (台灣)</h3>
+                    <h3>國立陽明交通大學 (陽明交大)，新竹市，臺灣</h3>
                 </div>
                 <div class="row">
                     <h3>碩士（M.S.）生研究員，全職</h3>
@@ -303,14 +303,14 @@ import CVLayout from '../layouts/CVLayout.astro';
             </div>
             <div class="item">
                 <div class="row">
-                    <h3>國立陽明交通大學 (陽明交大)，新竹市，中華民國 (台灣)</h3>
+                    <h3>國立陽明交通大學 (陽明交大)，新竹市，臺灣</h3>
                 </div>
                 <div class="row">
                     <h3>研究助理，實習</h3>
                     <span class="date">2023 年 9 月 - 2023 年 12 月</span>
                 </div>
                 <ul class="details">
-                    <li>國立陽明交通大學以人中心機器人與自動化實驗室(Hucenrotia Lab)的台灣體驗教育計畫（TEEP）。加入協作自主移動機器人研究小組。</li>
+                    <li>國立陽明交通大學以人中心機器人與自動化實驗室(Hucenrotia Lab)的臺灣體驗教育計畫（TEEP）。加入協作自主移動機器人研究小組。</li>
                     <li>使用TMFlow為頒獎典禮創建了自主移動機器人中機械手臂的程序流程。</li>
                     <li>關於為 Isaac Sim 模擬實現逆運動學的研究。</li>
                     <li>關於機械手臂末端執行器誤差計算和末端執行器可操作性的研究和構思。</li>
@@ -379,7 +379,7 @@ import CVLayout from '../layouts/CVLayout.astro';
                 <ul class="details">
                     <li>開發機器人生成人工智慧三杯球賽項目的視覺系統。</li>
                     <li>視覺系統將利用YOLOv7來偵測杯子和球，然後使用SORT演算法來追蹤球和杯子。這種檢測和追蹤將與自訂演算法相結合，以追蹤杯子內的球。</li>
-                    <li>該計畫將於 2024 年 8 月 21 日至 24 日在台灣台北南港舉行的「2024 年智慧亞洲」展會上在國家科學技術委員會展位內的一個區域內展示。</li>
+                    <li>該計畫將於 2024 年 8 月 21 日至 24 日在臺灣台北南港舉行的「2024 年智慧亞洲」展會上在國家科學技術委員會展位內的一個區域內展示。</li>
                     <li>已發表論文。 N. Khoirurizka, J. C. Prajogo, S. Perkins, C. -H. Kuo and H. -I. Lin, A Case of Cups and a Ball: Utilizing Generative Artificial Intelligence for Human-robotic Collaboration in Task Execution, 2024 International Automatic Control Conference (CACS), Taoyuan, Taiwan, 2024, pp. 1-6, doi: 10.1109/CACS63404.2024.10773301。</li>
                 </ul>
             </div>
