cv minor info update

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -33,7 +33,7 @@ import CVLayout from '../layouts/CVLayout.astro';
                     <li><strong>Advisor:</strong> Professor Hsien-I Lin <span class="chinese-name">林顯易 教授</span></li>
                     <li><strong>Laboratory:</strong> Human-Centered Robotic and Automation Laboratory</li>
                     <li><strong>Research Interest:</strong> Vision-Language Model, Image Processing, Computer Vision, Generative AI</li>
-                    <li><strong>Research Topic:</strong> Detection Vision-Language Model for Robotic Assembly</li>
+                    <li><strong>Research Topic:</strong> Open-Vocabulary Detection Model for Robotic Assembly</li>
                     <li><strong>Relevant Coursework:</strong> Data Mining, Machine Learning for Signal Processing, Pattern Recognition, Deep Learning, Digital Image Processing, Mobile Robots, Applications of Language Processing in Practice, Computer Vision, Practice in Entrepreneurship</li>
                 </ul>
             </div>
@@ -264,7 +264,7 @@ import CVLayout from '../layouts/CVLayout.astro';
                     <li><strong>指導教授:</strong> Professor Hsien-I Lin <span class="chinese-name">林顯易 教授</span></li>
                     <li><strong>實驗室:</strong> 人中心機器人與自動化實驗室</li>
                     <li><strong>研究興趣:</strong> 視覺語言模型、影像處理、電腦視覺、生成式人工智慧</li>
-                    <li><strong>研究主題:</strong> 應用於機器人組裝的視覺語言模型</li>
+                    <li><strong>研究主題:</strong> 機器人組裝用的開放詞彙偵測模型</li>
                     <li><strong>相關課程:</strong> 資料探勘、機器學習之訊號處理應用、圖形識別、深度學習、影像處理、自走式機器人、語言處理應用實踐、電腦視覺、創業實作</li>
                 </ul>
             </div>
