index home pro side minor update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const pageImage = "/images/pro-profile.jpg";
             <div class="row">
                 <span class="label">Research Topic</span>
                 <span class="arrow">→</span>
-                <span class="value">Detection 2D-VLM for Robotic Assembly</span>
+                <span class="value">Open-Vocabulary Detection Model for Robotic Assembly</span>
             </div>
 
             <div class="row">
